<resources>
    <string name="app_name">ExpApp</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_login_button">Acceder</string>
    <string name="no_tienes_cuenta">¿No estas registrado?,&#032;</string>
    <string name="crear_cuenta">Registrate aquí!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password_confirm">Confirmar Contraseña</string>
    <string name="btn_crear_cuenta">Crear Cuenta</string>
    <string name="title_activity_referencia_activity">referencia_activity</string>

    <!--Titulos-->
    <string name="titulo_crear_cuenta">Crear Cuenta</string>
    <string name="username_card">Killing Joke</string>
    <string name="time_card">4 Dias</string>
    <string name="firstWord">La broma asesina</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Me</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Like</string>
    <string name="titleimage_detail">El dinero puede crear un superheroe.</string>
    <string name="lorem">La identidad secreta de Batman es Bruce Wayne (Bruno Díaz, en algunos países de habla hispana), un empresario multimillonario y filántropo de Gotham City. Después de ser testigo del asesinato de sus padres en un violento y fallido asalto cuando era niño, jura vengarse y combatir la delincuencia para lo cual se somete a un riguroso entrenamiento físico y mental. Adopta el diseño de un murciélago para su vestimenta, sus utensilios de combate y sus vehículos. A diferencia de los superhéroes, no tiene superpoderes: recurre a su intelecto, así como a aplicaciones científicas y tecnológicas para crear armas y herramientas con las cuales lleva a cabo sus actividades. Vive en la mansión Wayne, en cuyos subterráneos se encuentra la Batcave, el centro de operaciones de Batman. Recibe la ayuda constante de otros aliados, entre los cuales pueden mencionarse Robin, Batgirl (posteriormente Oráculo), Nightwing, el comisionado de la policía local, James Gordon y su mayordomo Alfred Pennyworth.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
</resources>
