<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mengasis.manuel.expapp.view.NewAccountActivity"
    android:background="@color/colorPrimary">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <!--Input Text para el usuario-->
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/EditTextWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <!--Input Text para el correo-->
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/EditTextWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <!--Input Text para la constraseña-->
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/EditTextWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <!--Input Text para la confirmacion de la constraseña-->
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/EditTextWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password_confirm"
                    android:inputType="textPassword">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_crear_cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_crear_cuenta"
                android:theme="@style/RaisedButtonDark"/>


        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
